# cf_version_2025

./: .gitignore  LICENSE  README.md  pyproject.toml
cf_ts_main_replication/analysis/: q2_analysis_graphs.Rmd  study2_main_basic_preprocessing.Rmd
cf_ts_main_replication/task_code/: README.md  combine_for_cogrun.py  experiment.html
cf_ts_main_replication/task_code/cognition_run_files/: combined_scripts_final_dec19.js  combined_scripts_final_dec24.js  combined_scripts_final_jan15.js  combined_scripts_final_jan7.js  final_cog_run.js  plugin-dsst-with-end-rest.js
cf_ts_main_replication/task_code/js/: digit-span.js  init-jspsych.js  instructions.js  plugin-spatial-recall.js  poldrack_consent_form.html  rest-experiment.js  spatial-recall.js
cf_ts_replication/: .README  .Rhistory  pre-registration-doc.Rmd  pre-registration-doc.html
cf_ts_replication/analysis/: full_relevant_analysis.Rmd  main_basic_preprocessing.Rmd  q1_q3_analysis_graphs.Rmd
cf_ts_replication/data_cleaned/test_run/: main_trials_cleaned.csv  practice_trials_cleaned.csv  survey_cleaned.csv  timed_out_data_cleaned.csv
